increased MaxPermSize for the batch job